[gd_scene load_steps=9 format=2]

[ext_resource path="res://interface/CalculatorUI.gd" type="Script" id=1]
[ext_resource path="res://interface/Font/VerdanaFont.tres" type="DynamicFont" id=2]
[ext_resource path="res://interface/NumberDisplay.tscn" type="PackedScene" id=3]
[ext_resource path="res://interface/ThemedButton.tscn" type="PackedScene" id=4]
[ext_resource path="res://interface/Button.png" type="Texture" id=5]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0.517647, 0.494118, 0.529412, 1 )

[sub_resource type="StyleBoxFlat" id=2]
bg_color = Color( 0, 0, 0, 1 )

[sub_resource type="StyleBoxTexture" id=3]
texture = ExtResource( 5 )
region_rect = Rect2( 0, 0, 18, 18 )
margin_left = 2.0
margin_right = 2.0

[node name="CalculatorUI" type="Control"]
editor/display_folded = true
margin_right = 96.0
margin_bottom = 148.0
script = ExtResource( 1 )

[node name="BG" type="Panel" parent="."]
margin_right = 96.0
margin_bottom = 148.0
mouse_filter = 1
custom_styles/panel = SubResource( 1 )

[node name="TitlePanel" type="Panel" parent="BG"]
editor/display_folded = true
margin_right = 96.0
margin_bottom = 16.0
mouse_filter = 2
custom_styles/panel = SubResource( 2 )

[node name="TitleLabel" type="Label" parent="BG/TitlePanel"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_fonts/font = ExtResource( 2 )
text = "Calculator"
align = 1

[node name="Body" type="Control" parent="BG"]
margin_left = 3.0
margin_top = 18.0
margin_right = 93.0
margin_bottom = 146.0

[node name="AmountScreen" parent="BG/Body" instance=ExtResource( 3 )]
margin_left = 3.0
margin_right = 87.0
ammount_to_give = 1000

[node name="Plus" parent="BG/Body" instance=ExtResource( 4 )]
margin_left = 3.0
margin_top = 22.0
margin_right = 21.0
margin_bottom = 40.0
text = "+"

[node name="Minus" parent="BG/Body" instance=ExtResource( 4 )]
margin_left = 3.0
margin_top = 44.0
margin_right = 21.0
margin_bottom = 62.0
text = "-"

[node name="Mult" parent="BG/Body" instance=ExtResource( 4 )]
margin_left = 3.0
margin_top = 66.0
margin_right = 21.0
margin_bottom = 84.0
custom_styles/normal = SubResource( 3 )
text = "X"

[node name="Div" parent="BG/Body" instance=ExtResource( 4 )]
margin_left = 3.0
margin_top = 88.0
margin_right = 21.0
margin_bottom = 106.0
text = "/"

[node name="Number9" parent="BG/Body" instance=ExtResource( 4 )]
margin_left = 69.0
margin_top = 22.0
margin_right = 87.0
margin_bottom = 40.0
text = "9"

[node name="Number8" parent="BG/Body" instance=ExtResource( 4 )]
margin_left = 47.0
margin_top = 22.0
margin_right = 65.0
margin_bottom = 40.0
text = "8"

[node name="Number7" parent="BG/Body" instance=ExtResource( 4 )]
margin_left = 25.0
margin_top = 22.0
margin_right = 43.0
margin_bottom = 40.0
text = "7"

[node name="Number6" parent="BG/Body" instance=ExtResource( 4 )]
margin_left = 69.0
margin_top = 44.0
margin_right = 87.0
margin_bottom = 62.0
text = "6"

[node name="Number5" parent="BG/Body" instance=ExtResource( 4 )]
margin_left = 47.0
margin_top = 44.0
margin_right = 65.0
margin_bottom = 62.0
text = "5"

[node name="Number4" parent="BG/Body" instance=ExtResource( 4 )]
margin_left = 25.0
margin_top = 44.0
margin_right = 43.0
margin_bottom = 62.0
text = "4"

[node name="Number3" parent="BG/Body" instance=ExtResource( 4 )]
margin_left = 69.0
margin_top = 66.0
margin_right = 87.0
margin_bottom = 84.0
text = "3"

[node name="Number2" parent="BG/Body" instance=ExtResource( 4 )]
margin_left = 47.0
margin_top = 66.0
margin_right = 65.0
margin_bottom = 84.0
text = "2"

[node name="Number1" parent="BG/Body" instance=ExtResource( 4 )]
margin_left = 25.0
margin_top = 66.0
margin_right = 43.0
margin_bottom = 84.0
text = "1"

[node name="Number0" parent="BG/Body" instance=ExtResource( 4 )]
margin_left = 25.0
margin_top = 88.0
margin_right = 43.0
margin_bottom = 106.0

[node name="Equal" parent="BG/Body" instance=ExtResource( 4 )]
margin_left = 47.0
margin_top = 88.0
margin_right = 87.0
margin_bottom = 106.0
text = "="

[node name="Send" parent="BG/Body" instance=ExtResource( 4 )]
margin_left = 47.0
margin_top = 110.0
margin_right = 87.0
margin_bottom = 128.0
text = "Send"

[node name="Clear" parent="BG/Body" instance=ExtResource( 4 )]
margin_left = 3.0
margin_top = 110.0
margin_right = 43.0
margin_bottom = 128.0
text = "Clear"
[connection signal="pressed" from="BG/Body/Plus" to="." method="_on_Plus_pressed"]
[connection signal="pressed" from="BG/Body/Minus" to="." method="_on_Minus_pressed"]
[connection signal="pressed" from="BG/Body/Mult" to="." method="_on_Mult_pressed"]
[connection signal="pressed" from="BG/Body/Div" to="." method="_on_Div_pressed"]
[connection signal="pressed" from="BG/Body/Number9" to="." method="_on_Number9_pressed"]
[connection signal="pressed" from="BG/Body/Number8" to="." method="_on_Number8_pressed"]
[connection signal="pressed" from="BG/Body/Number7" to="." method="_on_Number7_pressed"]
[connection signal="pressed" from="BG/Body/Number6" to="." method="_on_Number6_pressed"]
[connection signal="pressed" from="BG/Body/Number5" to="." method="_on_Number5_pressed"]
[connection signal="pressed" from="BG/Body/Number4" to="." method="_on_Number4_pressed"]
[connection signal="pressed" from="BG/Body/Number3" to="." method="_on_Number3_pressed"]
[connection signal="pressed" from="BG/Body/Number2" to="." method="_on_Number2_pressed"]
[connection signal="pressed" from="BG/Body/Number1" to="." method="_on_Number1_pressed"]
[connection signal="pressed" from="BG/Body/Number0" to="." method="_on_Number0_pressed"]
[connection signal="pressed" from="BG/Body/Equal" to="." method="_on_Equal_pressed"]
[connection signal="pressed" from="BG/Body/Send" to="." method="_on_Send_pressed"]
[connection signal="pressed" from="BG/Body/Clear" to="." method="_on_Clear_pressed"]
